--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
   }
